// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deserialize a paragraph and assign the new nodeType 1`] = `
Object {
  "children": Array [
    Object {
      "text": "random text",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize heading depth two without changing the default nodeTypes while passing other overrides 1`] = `
Object {
  "children": Array [
    Object {
      "text": "yo",
    },
  ],
  "type": "heading_two",
}
`;

exports[`Deserializes heading depth one to slate state object with custom node types & {type: "h1", children: [{text: "hey"}]} 1`] = `
Object {
  "children": Array [
    Object {
      "text": "hey",
    },
  ],
  "type": "h1",
}
`;
